# attrition

./: main.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_app2.py  streamm.py
model/: attrition_model_metadata.pkl
