[tool.poetry]
name = "ibm-attrition-api"
version = "0.1.0"
description = ""
authors = ["wan.mureithi <estherdee27@gmail.com>"]
readme = "README.md"
packages = [{include = "ibm_attrition_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
joblib = "^1.4.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pydantic = "^2.11.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
xgboost = "^3.0.0"
cloudpickle = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
